--- a/index.html
+++ b/index.html
@@ -39,21 +39,27 @@
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
             <div class="description">Cloudy</div>
           </div>
-          <p class="dt">Date: 22/22/22</p>
+          <p class="dt">Date: 03/03/26</p>
         </div>
       </div>
       <div id="alert-config" class="card info-card">
         <h5>Alert Configuration</h5>
-        <label for="temp-threshold">Temperature Threshold (°C):</label>
-        <input type="number" id="temp-threshold" placeholder="Set threshold" />
+        <br>
+        <br>
+        <br>
+        <br>
+    
+        <label for="temp-threshold" class="temp-threshold2" 
+        style="font-size: 16px; font-weight: bold; color: #ffffff; margin-right: 10px;">
+   Temperature Threshold °C:
+ </label>
+ <input type="number" id="temp-threshold" 
+        placeholder="Set threshold" 
+        style="padding: 5px; border: 1px solid #ccc; border-radius: 4px; width: 200px; height: 40px ;" />
+ 
   
-        <label for="condition-threshold">Weather Condition:</label>
-        <select id="condition-threshold">
-          <option value="Clear">Clear</option>
-          <option value="Clouds">Cloudy</option>
-          <option value="Rain">Rainy</option>
-          <option value="Snow">Snowy</option>
-        </select>
+        <br>
+        <br>
   
         <button id="set-alerts">Set Alerts</button>
       </div>
@@ -75,31 +81,31 @@
           <div class="box">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon1">
             <div class="temp1">Temp: 28°C</div>
-            <div class="dt1 ddt">Date: 23/22/22</div>
+            <div class="dt1 ddt">Date: 23/10/24</div>
           </div>
 
           <div class="box">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon2">
             <div class="temp2">Temp: 30°C</div>
-            <div class="dt2 ddt">Date: 24/22/22</div>
+            <div class="dt2 ddt">Date: 24/10/24</div>
           </div>
 
           <div class="box">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon3">
             <div class="temp3">Temp: 29°C</div>
-            <div class="dt3 ddt">Date: 25/22/22</div>
+            <div class="dt3 ddt">Date: 25/10/24</div>
           </div>
 
           <div class="box">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon4">
             <div class="temp4">Temp: 27°C</div>
-            <div class="dt4 ddt">Date: 26/22/22</div>
+            <div class="dt4 ddt">Date: 26/10/24</div>
           </div>
 
           <div class="box">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon5">
             <div class="temp5">Temp: 26°C</div>
-            <div class="dt5 ddt">Date: 27/22/22</div>
+            <div class="dt5 ddt">Date: 27/10/24</div>
           </div>
         </div>
       </div>
